--- a/牛客/牛客算法.md
+++ b/牛客/牛客算法.md
@@ -27,6 +27,303 @@ module.exports = {
 
 涉及大数加法
 
+---
+
+## **NC45** **实现二叉树先序，中序和后序遍历**
+
+给定一棵二叉树，分别按照二叉树先序，中序和后序打印所有的节点。
+
+### **递归**
+
+```js
+/*
+ * function TreeNode(x) {
+ *   this.val = x;
+ *   this.left = null;
+ *   this.right = null;
+ * }
+ */
+
+/**
+ * 
+ * @param root TreeNode类 the root of binary tree
+ * @return int整型二维数组
+ */
+function threeOrders( root ) {
+    // write code here
+    const ans = [[], [], []];
+    if (root == null) {
+    	return ans;
+    }
+    //先序
+    var preOrder = (root) =>{
+    	if (root == null) {
+    		return;
+    	}
+    	ans[0].push(root.val);
+    	preOrder(root.left);
+    	preOrder(root.right);
+    }
+    //中序
+    var midOrder = (root) =>{
+    	if (root == null) {
+    		return;
+    	}
+    	midOrder(root.left);
+    	ans[1].push(root.val);
+    	midOrder(root.right);
+    }
+     //后序
+    var postOrder = (root) =>{
+    	if (root == null) {
+    		return;
+    	}
+    	postOrder(root.left);
+    	postOrder(root.right);
+    	ans[2].push(root.val);
+    }
+
+    preOrder(root);
+    postOrder(root);
+    midOrder(root);
+
+    return ans;
+
+}
+module.exports = {
+    threeOrders : threeOrders
+};
+```
+
+### **非递归**
+
+```js
+/*
+ * function TreeNode(x) {
+ *   this.val = x;
+ *   this.left = null;
+ *   this.right = null;
+ * }
+ */
+
+/**
+ * 
+ * @param root TreeNode类 the root of binary tree
+ * @return int整型二维数组
+ */
+function threeOrders( root ) {
+    // write code here
+    const ans = [[], [], []];
+    if (root == null) {
+    	return ans;
+    }
+    //先序
+    var preOrder = (root) =>{
+    	if (root == null) {
+    		return;
+    	}
+    	let stack = [root];
+    	while(stack.length > 0){
+    		let p = stack.pop();
+    		ans[0].push(p.val);
+    		if (p.right !== null) {
+    			stack.push(p.right);
+    		}
+    		if (p.left !== null) {
+    			stack.push(p.left);
+    		}
+    	}
+    }
+    //中序
+    var midOrder = (root) =>{
+    	if (root == null) {
+    		return;
+    	}
+    	let p = root;
+    	let stack = [];
+    	while (stack.length > 0 || p !== null){
+    		while (p !== null){  // 寻找最左的孩子
+    			stack.push(p);
+    			p = p.left;
+    		}
+    		p = stack.pop();
+    		ans[1].push(p.val);  //访问结点
+    		p = p.right;  //访问右子树，不存在则会向上访问
+    	}
+    }
+     //后序
+    var postOrder = (root) =>{
+    	if (root == null) {
+    		return;
+    	}
+    	let stack = [];
+    	let p = root;
+    	let last = null;  //last记录先前被访问的结点
+    	while (stack.length > 0 || p !== null){
+    		while (p !== null){
+    			stack.push(p);
+    			p = p.left;
+    		}
+    		p=stack[stack.length - 1];
+    		if (p.right === null || last === p.right) {
+    			//若该结点没有右孩子，或上一次访问的是右子树，则直接访问该结点
+    			stack.pop();
+    			ans[2].push(p.val);
+    			last = p;  //更新last
+    			p = null;  //p置空，防止下一次循环重复访问
+    		}else{
+    			p = p.right;  //右子树
+    		}
+    	}
+    }
+
+    preOrder(root);
+    postOrder(root);
+    midOrder(root);
+
+    return ans;
+
+}
+module.exports = {
+    threeOrders : threeOrders
+};
+```
+
+### **Morris 遍历**
+
+```js
+var preorderTraversal = function(root) {
+    if (root === null) {
+        return [];
+    }
+    const ans = [];
+
+    let p1 = root;  //新建临时节点，令该节点为 root
+    let p2 = null;
+
+    while (p1 !== null){
+        p2 = p1.left;
+        if (p2 !== null) {
+            //如果当前节点的左子节点不为空，在当前节点的左子树中找到当前节点在中序遍历下的前驱节点
+            while (p2.right !== null && p2.right !==p1){
+                //如果前驱节点的右子节点为当前节点，
+                p2 = p2.right;  //当前节点更新为当前节点的右子节点。
+            }
+            if (p2.right === null) {
+                //如果前驱节点的右子节点为空，将当前节点加入答案
+                ans.push(p1.val);
+                //并将前驱节点的右子节点更新为当前节点
+                p2.right = p1;
+                //当前节点更新为当前节点的左子节点
+                p1 = p1.left;
+                continue;
+            }else{
+                //将它的右子节点重新设为空
+                p2.right = null;
+            }
+        }else{
+            //如果当前节点的左子节点为空，将当前节点加入答案，并遍历当前节点的右子节点
+            ans.push(p1.val);
+        }
+        p1 = p1.right;
+    }
+    return ans;
+};
+
+var inorderTraversal = function (root) {
+    if (root === null) {
+        return [];
+    }
+    const ans = [];
+    let predecessor = null;
+
+    while (root){
+        if (root.left) {
+            //predecessor 节点就是当前 root 节点向左走一步，然后一直向右走至无法走为止
+            predecessor = root.left;
+            while (predecessor.right && predecessor.right !== root){
+                predecessor = predecessor.right;
+            }
+            //让 predecessor 的右指针指向 root，继续遍历左子树
+            if (!predecessor.right) {
+                predecessor.right = root;
+                root=root.left;
+            }else {
+                //明左子树已经访问完了，我们需要断开链接
+                ans.push(root.val);
+                predecessor.right = null;
+                root=root.right;
+            }
+        }else {
+            // 如果没有左孩子，则直接访问右孩子
+            ans.push(root.val);
+            root=root.right;
+        }
+    }
+    return ans;
+}
+/*
+其实整个过程我们就多做一步：假设当前遍历到的节点为 x，将 x 的左子树中最右边的节点的右孩子指向 x，这样在左子树遍历完成后我们通过这个指向走回了 x，且能通过这个指向知晓我们已经遍历完成了左子树，而不用再通过栈来维护，省去了栈的空间复杂度。
+*/
+
+var postorderTraversal = function(root) {
+    if (root === null) {
+        return [];
+    }
+    const ans = [];
+
+    let p1 = root;  //新建临时节点，令该节点为 root
+    let p2 = null;
+
+    while (p1 !== null){
+        p2 = p1.left;
+        if (p2 !== null) {
+            //如果当前节点的左子节点不为空，在当前节点的左子树中找到当前节点在中序遍历下的前驱节点
+            while (p2.right !== null && p2.right !==p1){
+                //如果前驱节点的右子节点为当前节点，
+                p2 = p2.right;  //当前节点更新为当前节点的右子节点。
+            }
+            if (p2.right === null) {
+                //如果前驱节点的右子节点为空，将前驱节点的右子节点设置为当前节点
+                p2.right = p1;
+                //当前节点更新为当前节点的左子节点
+                p1 = p1.left;
+                continue;
+            }else{
+                //将它的右子节点重新设为空
+                p2.right = null;
+                //倒序输出从当前节点的左子节点到该前驱节点这条路径上的所有节点。
+                addPath(ans,p1.left);
+            }
+        }
+        p1 = p1.right;
+    }
+    addPath(ans, root);
+    return ans;
+}
+
+var addPath = function(res, node){
+    let count = 0;
+    while (node !== null){
+        count++;
+        res.push(node.val);
+        node = node.right;
+    }
+    let left = res.length - count;
+    let right = res.length - 1;
+    while (left < right){
+        let temp = res[left];
+        res[left] = res[right];
+        res[right] = temp;
+        left++;
+        right--;
+    }
+}
+
+```
+
+
+
 -----
 
 ## **NC65** **斐波那契数列**
@@ -99,12 +396,13 @@ module.exports = {
 
 ---
 
-**NC93** **设计LRU缓存结构**
+## **NC93** **设计LRU缓存结构**
 
 设计LRU(最近最少使用)缓存结构，该结构在构造时确定大小，假设大小为 capacity ，操作次数是 n ，并有如下功能:
-\1. Solution(int capacity) 以正整数作为容量 capacity 初始化 LRU 缓存
-\2. get(key)：如果关键字 key 存在于缓存中，则返回key对应的value值，否则返回 -1 。
-\3. set(key, value)：将记录(key, value)插入该结构，如果关键字 key 已经存在，则变更其数据值 value，如果不存在，则向缓存中插入该组 key-value ，如果key-value的数量超过capacity，弹出最久未使用的key-value
+
+1. Solution(int capacity) 以正整数作为容量 capacity 初始化 LRU 缓存
+2. get(key)：如果关键字 key 存在于缓存中，则返回key对应的value值，否则返回 -1 。
+3. set(key, value)：将记录(key, value)插入该结构，如果关键字 key 已经存在，则变更其数据值 value，如果不存在，则向缓存中插入该组 key-value ，如果key-value的数量超过capacity，弹出最久未使用的key-value
 
 提示:
 1.某个key的set或get操作一旦发生，则认为这个key的记录成了最常使用的，然后都会刷新缓存。
@@ -113,8 +411,78 @@ module.exports = {
 4.函数set和get必须以O(1)的方式运行
 5.为了方便区分缓存里key与value，下面说明的缓存里key用""号包裹
 
-```
+**知识点1：哈希表**
 
+哈希表是一种根据关键码（key）直接访问值（value）的一种数据结构。而这种直接访问意味着只要知道key就能在O(1)O(1)*O*(1)时间内得到value，因此哈希表常用来统计频率、快速检验某个元素是否出现过等。
+
+**知识点2：双向链表**
+
+双向链表是一种特殊的链表，它除了链表具有的每个节点指向后一个节点的指针外，还拥有一个每个节点指向前一个节点的指针，因此它可以任意向前或者向后访问，每次更改节点连接状态的时候，需要变动两个指针。
+
+**思路：**
+
+插入与访问值都是O(1)，没有任何一种数据结构可以直接做到。
+
+于是我们可以想到数据结构的组合：访问O(1)很容易想到了哈希表；插入O(1)的数据结构有很多，但是如果访问到了这个地方再选择插入，且超出长度要在O(1)之内删除，我们可以想到用链表，可以用哈希表的key值对应链表的节点，完成直接访问。但是我们还需要把每次访问的key值节点加入链表头，同时删掉链表尾，所以选择双向链表，便于删除与移动。
+
+于是我们的方法就是哈希表+双向链表。
+
+```js
+
+
+/**
+ * @param {number} capacity
+ */
+var Solution = function(capacity) {
+    // write code here
+    this.maxCapacity = capacity;
+    this.cache = new Map();
+};
+
+/** 
+ * @param {number} key
+ * @return {number}
+ */
+Solution.prototype.get = function(key) {
+    // write code here
+    if (this.cache.has(key)) {
+    	let value = this.cache.get(key);
+    	this.cache.delete(key);  //先删除再重新加入
+    	this.cache.set(key,value);
+    	return value;
+    }else{
+    	return -1;
+    }
+};
+
+/** 
+ * @param {number} key 
+ * @param {number} value
+ * @return {void}
+ */
+Solution.prototype.set = function(key, value) {
+    // write code here
+    if (this.cache.has(key)){
+    	//存在就先删除
+    	this.cache.delete(key);
+    }
+    if (this.cache.size === this.maxCapacity) {
+    	let last = this.cache.keys().next();  //删除最不常用的那一个
+    	this.cache.delete(last.value);
+    }
+    this.cache.set(key,value);
+};
+
+module.exports = {
+    Solution : Solution
+};
+
+/**
+ * Your Solution object will be instantiated and called as such:
+ * var solution = new Solution(capacity)
+ * var output = solution.get(key)
+ * solution.set(key,value)
+ */
 ```
 
 
@@ -145,7 +513,59 @@ module.exports = {
 };
 ```
 
-----
+---
+
+## **NC119** **最小的K个数**
+
+给定一个长度为 n 的可能有重复值的数组，找出其中不去重的最小的 k 个数。例如数组元素是4,5,1,6,2,7,3,8这8个数字，则最小的4个数字是1,2,3,4(任意顺序皆可)。
+
+```js
+/**
+ * @param {number[]} arr
+ * @param {number} k
+ * @return {number[]}
+ */
+var smallestK = function(arr, k) {
+    if (k === 0) {
+        return [];
+    }
+    if (arr.length === k) {
+        return arr;
+    }
+    const left = [], right = [], same = [];
+    let randonIndex = Math.floor(arr.length/2);
+    let pivolt = arr[randonIndex];
+    for (let i = 0; i < arr.length; i++){
+        if (arr[i] < pivolt) {
+            left.push(arr[i]);
+        }else if (arr[i] > pivolt){
+            right.push(arr[i]);
+        }else{
+            same.push(arr[i]);
+        }
+    }
+    if (left.length === k) {
+        return left;
+    }else if (left.length > k){
+        return smallestK(left,k);
+    }else if (left.length < k) {
+        let res = left.length + same.length;
+        if (res >= k) {
+            return left.concat(same.slice(0, k - left.length))
+        }else{
+            return left.concat(same, smallestK(right, k - left.length - same.length));
+        }
+    }
+};
+
+let arr = [1,3,5,7,2,4,6,8], k = 4;
+let result = smallestK(arr, k);
+console.log(result);
+```
+
+
+
+---
 
 ## **NC140** **排序**
 
