--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2809,6 +2809,59 @@ var isSymmetric = function(root) {
 
 ```
 
+----
+
+## 102. 二叉树的层序遍历
+
+给你二叉树的根节点 root ，返回其节点值的 层序遍历 。 （即逐层地，从左到右访问所有节点）。
+
+广度优先搜索
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[][]}
+ */
+var levelOrder = function(root) {
+    if (root === null) {
+        return [];
+    }
+    const ans = [];
+
+    let arr = [root];
+    let node = null;
+    let n = 0;  //每一层的结点数
+    while (arr.length > 0){
+        n=arr.length;
+        let temp = [];
+        while (n > 0){
+            node = arr.shift();
+            temp.push(node.val);
+            if (node.left) {
+                arr.push(node.left);
+            }
+            if (node.right) {
+                arr.push(node.right);
+            }
+            n--;
+        }
+        ans.push(temp);
+    }
+
+    return ans;
+};
+```
+
+
+
 
 ---
 ## 104.二叉树的最大深度
