--- a/牛客/牛客算法.md
+++ b/牛客/牛客算法.md
@@ -29,11 +29,67 @@ module.exports = {
 
 ---
 
+**NC15** **求二叉树的层序遍历**
+
+给定一个二叉树，返回该二叉树层序遍历的结果，（从左到右，一层一层地遍历）
+
+```js
+/*
+ * function TreeNode(x) {
+ *   this.val = x;
+ *   this.left = null;
+ *   this.right = null;
+ * }
+ */
+
+/**
+  * 
+  * @param root TreeNode类 
+  * @return int整型二维数组
+  */
+function levelOrder( root ) {
+    // write code here
+    if (root === null) {
+        return [];
+    }
+    const ans = [];
+
+    let arr = [root];
+    let node = null;
+    let n = 0;  //每一层的结点数
+    while (arr.length > 0){
+        n=arr.length;
+        let temp = [];
+        while (n > 0){
+            node = arr.shift();
+            temp.push(node.val);
+            if (node.left) {
+                arr.push(node.left);
+            }
+            if (node.right) {
+                arr.push(node.right);
+            }
+            n--;
+        }
+        ans.push(temp);
+    }
+
+    return ans;
+}
+module.exports = {
+    levelOrder : levelOrder
+};
+```
+
+
+
+---
+
 ## **NC45** **实现二叉树先序，中序和后序遍历**
 
 给定一棵二叉树，分别按照二叉树先序，中序和后序打印所有的节点。
 
-### **递归**
+**递归**
 
 ```js
 /*
@@ -95,7 +151,7 @@ module.exports = {
 };
 ```
 
-### **非递归**
+**非递归**
 
 ```js
 /*
@@ -189,7 +245,7 @@ module.exports = {
 };
 ```
 
-### **Morris 遍历**
+**Morris 遍历**
 
 ```js
 var preorderTraversal = function(root) {
@@ -396,6 +452,79 @@ module.exports = {
 
 ---
 
+## **NC88** **寻找第K大**
+
+有一个整数数组，请你根据快速排序的思路，找出数组中第 k 大的数。
+
+给定一个整数数组 a ,同时给定它的大小n和要找的 k ，请返回第 k 大的数(包括重复的元素，不用去重)，保证答案存在。
+
+要求：时间复杂度 O(nlogn)，空间复杂度 O(1)
+
+**知识点：分治**
+
+分治即“分而治之”，“分”指的是将一个大而复杂的问题划分成多个性质相同但是规模更小的子问题，子问题继续按照这样划分，直到问题可以被轻易解决；“治”指的是将子问题单独进行处理。经过分治后的子问题，需要将解进行合并才能得到原问题的解，因此整个分治过程经常用递归来实现。
+
+
+
+```
+/**
+ * 
+ * @param a int整型一维数组 
+ * @param n int整型 
+ * @param K int整型 
+ * @return int整型
+ */
+function findKth( a ,  n ,  K ) {
+    // write code here
+    return quickSort(a, 0, n - 1, K);
+}
+
+/**
+ * @param { number[] } arr
+ * @param { number} left
+ * @param { number } right
+ * @param { number } K
+ */
+function quickSort(arr, left, right, K){
+	let i = left, j = right, pivot = arr[left];
+	while (i < j){
+
+		while (i < j && arr[j] < pivot){
+			j--;
+		}
+		while (i < j && arr[i] >= pivot){
+			i++;
+		}
+		if (i < j) {
+			swap(arr, i, j);
+		}
+	}
+	
+	let diffK = K - i + left + 1;
+	if (diffK === 0) {
+		return pivot;
+	}else if (diffK < 0){
+		return quickSort(arr, left, i-1, K);
+	}else{
+		return quickSort(arr, i+1, right, diffK);
+	}
+}
+
+function swap(arr, i, j){
+	let temp = arr[i];
+	arr[i] = arr[j];
+	arr[j] = temp;
+}
+
+module.exports = {
+    findKth : findKth
+};
+```
+
+
+
+---
+
 ## **NC93** **设计LRU缓存结构**
 
 设计LRU(最近最少使用)缓存结构，该结构在构造时确定大小，假设大小为 capacity ，操作次数是 n ，并有如下功能:
@@ -485,6 +614,8 @@ module.exports = {
  */
 ```
 
+---
+
 
 
 ----
@@ -518,6 +649,48 @@ module.exports = {
 ## **NC119** **最小的K个数**
 
 给定一个长度为 n 的可能有重复值的数组，找出其中不去重的最小的 k 个数。例如数组元素是4,5,1,6,2,7,3,8这8个数字，则最小的4个数字是1,2,3,4(任意顺序皆可)。
+
+```js
+function GetLeastNumbers_Solution(input, k)
+{
+    // write code here
+    if (k === 0) {
+    	return [];
+    }
+    if (input.length === k) {
+    	return input;
+    }
+    const left = [], right = [], same = [];
+    let randonIndex = Math.floor(input.length/2);
+    let pivolt = input[randonIndex];
+    for (let i = 0; i < input.length; i++){
+    	if (input[i] < pivolt) {
+    		left.push(input[i]);
+    	}else if (input[i] > pivolt){
+    		right.push(input[i]);
+    	}else{
+    		same.push(input[i]);
+    	}
+    }
+    if (left.length === k) {
+    	return left;
+    }else if (left.length > k){
+    	return GetLeastNumbers_Solution(left,k);
+    }else if (left.length < k) {
+    	let res = left.length + same.length;
+    	if (res >= k) {
+    		return left.concat(same.slice(0, k - left.length))
+    	}else{
+    		return left.concat(same, GetLeastNumbers_Solution(right, k - left.length - same.length));
+    	}
+    }
+}
+module.exports = {
+    GetLeastNumbers_Solution : GetLeastNumbers_Solution
+};
+```
+
+
 
 ```js
 /**
