--- a/牛客/牛客算法.md
+++ b/牛客/牛客算法.md
@@ -378,6 +378,16 @@ var addPath = function(res, node){
 
 ```
 
+---
+
+## **NC61** **两数之和**
+
+给出一个整型数组 numbers 和一个目标值 target，请在数组中找出两个加起来等于目标值的数的下标，返回的下标按升序排列。
+
+```
+
+```
+
 
 
 -----
