--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -728,35 +728,130 @@ n == height.length
 2 <= n <= 105
 0 <= height[i] <= 104
 
+**双指针**
+
 ```js
 /**
  * @param {number[]} height
  * @return {number}
  */
- //暴力超时
 var maxArea = function(height) {
-    let n=height.length;
-    const container=[];
-    let min;
-    let maxContainer=0;
+    let ans = 0;
     let area=0;
-    for (let i=0;i<n-1;i++){
-        for(let j=1;j<n;j++){
-            area=(j-i)*Math.min(height[i],height[j]);
-            maxContainer=area>maxContainer ? area : maxContainer;
+    //在初始时，左右指针分别指向数组的左右两端
+    for (let i = 0, j = height.length - 1; i < j;){
+        area = Math.min(height[i], height[j]) * (j - i);
+        ans = Math.max(ans,area);
+        if (height[i] <= height[j]) {
+            //移动对应数字较小的那个指针
+            i++;
+        }else{
+            j--;
         }
     }
-    return maxContainer;
+    return ans;
 };
 
-let height=[1,8,6,2,5,4,8,3,7];
-let result=maxArea(height);
-console.log(result);
+let test = [1,8,6,2,5,4,8,3,7];
+let result = maxArea(test);
+console.log(result);  //
 ```
 
+---
 
+## 12. 整数转罗马数字
 
+罗马数字包含以下七种字符： I， V， X， L，C，D 和 M。
 
+```
+字符          数值
+I             1
+V             5
+X             10
+L             50
+C             100
+D             500
+M             1000
+```
+
+例如， 罗马数字 2 写做 II ，即为两个并列的 1。12 写做 XII ，即为 X + II 。 27 写做  XXVII, 即为 XX + V + II 。
+
+通常情况下，罗马数字中小的数字在大的数字的右边。但也存在特例，例如 4 不写做 IIII，而是 IV。数字 1 在数字 5 的左边，所表示的数等于大数 5 减小数 1 得到的数值 4 。同样地，数字 9 表示为 IX。这个特殊的规则只适用于以下六种情况：
+
+I 可以放在 V (5) 和 X (10) 的左边，来表示 4 和 9。
+X 可以放在 L (50) 和 C (100) 的左边，来表示 40 和 90。 
+C 可以放在 D (500) 和 M (1000) 的左边，来表示 400 和 900。
+给你一个整数，将其转为罗马数字。
+
+**提示：**
+
+- `1 <= num <= 3999`
+
+**模拟**
+
+```js
+/**
+ * @param {number} num
+ * @return {string}
+ */
+var intToRoman = function(num) {
+    let valueSymbols = [
+        [1000,"M"],
+        [900,"CM"],
+        [500,"D"],
+        [400,"CD"],
+        [100,"C"],
+        [90,"XC"],
+        [50,"L"],
+        [40,"XL"],
+        [10,"X"],
+        [9,"IX"],
+        [5,"V"],
+        [4,"IV"],
+        [1,"I"]
+    ];
+    let roman = "";
+    for (let [value, symbol] of valueSymbols){
+        while (num >= value) {
+            roman += symbol;
+            num -= value;
+        }
+        if (num === 0) {
+            break;
+        }
+    }
+    return roman;
+};
+
+let num = 58;
+let result = intToRoman(num);
+console.log(result);  //
+```
+
+**硬编码数字**
+
+这恰好把这 13个符号分为四组，且组与组之间没有公共的符号。因此，整数num* 的十进制表示中的每一个数字都是可以单独处理的。
+
+进一步地，我们可以计算出每个数字在每个位上的表示形式，整理成一张硬编码表。如下图所示，其中 0 对应的是空字符串。
+
+![fig4](https://assets.leetcode-cn.com/solution-static/12/3.png)
+
+```js
+var intToRoman = function(num) {
+    const thousands = ["", "M", "MM", "MMM"];
+    const hundreds = ["", "C", "CC", "CCC", "CD", "D", "DC", "DCC", "DCCC", "CM"];
+    const tens = ["", "X", "XX", "XXX", "XL", "L", "LX", "LXX", "LXXX", "XC"];
+    const ones = ["", "I", "II", "III", "IV", "V", "VI", "VII", "VIII", "IX"];
+
+    let roman = "";
+    roman += thousands[Math.floor(num / 1000)];
+    roman += hundreds[Math.floor(num % 1000 / 100)];
+    roman += tens[Math.floor(num % 100 / 10)];
+    roman += ones[num % 10];
+    return roman;
+};
+
+```
 
 
 
@@ -1155,6 +1250,103 @@ console.log(threeNumberSum(test));  // [ [ -1, -1, 2 ], [ -1, 0, 1 ] ]
 
 
 ---
+## 16. 最接近的三数之和
+
+给你一个长度为 n 的整数数组 nums 和 一个目标值 target。请你从 nums 中选出三个整数，使它们的和与 target 最接近。
+
+返回这三个数的和。
+
+假定每组输入只存在恰好一个解。
+
+提示：
+
+3 <= nums.length <= 1000
+-1000 <= nums[i] <= 1000
+-104 <= target <= 104
+
+**排序** + **双指针**
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number}
+ */
+var threeSumClosest = function(nums, target) {
+
+    nums.sort((a, b) => a - b);
+    let n = nums.length;
+    let sum = 0;
+    let closestValue = Number.MAX_SAFE_INTEGER;
+
+    var updateClosestValue = (value) =>{
+        // 根据差值的绝对值来更新答案
+        if (Math.abs(value - target) < Math.abs(closestValue - target)) {
+            closestValue = value;
+        }
+    }
+
+    for (let i = 0; i < n; i++){
+        if (i > 0 && nums[i] === nums[i-1]){
+            continue;
+        }
+        let j = i + 1;
+        let k = n - 1;
+        let a = nums[i];
+        while (j < k){
+            let b = nums[j], c = nums[k];
+            sum = a + b + c;
+            if (sum === target) {
+                return target;
+            }
+            updateClosestValue(sum);
+            if (sum > target) {
+                //如果和大于 target，移动 c 对应的指针
+                k--;
+                //移动到下一个不相等的元素
+                while (j < k && nums[k] === c){
+                    k--;
+                }
+            }else{
+                // 如果和小于 target，移动 b 对应的指针
+                j++;
+                //移动到下一个不相等的元素
+                while (j < k && nums[j] === b){
+                    j++;
+                }
+            }
+        }
+    }
+
+    return closestValue;
+};
+
+let nums = [-1,2,1,-4], target = 1;
+let result = threeSumClosest(nums, target);
+console.log(result);
+```
+
+---
+
+## 17. 电话号码的字母组合
+
+给定一个仅包含数字 2-9 的字符串，返回所有它能表示的字母组合。答案可以按 任意顺序 返回。
+
+给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
+
+提示：
+
+0 <= digits.length <= 4
+digits[i] 是范围 ['2', '9'] 的一个数字。
+
+```
+
+```
+
+
+
+---
+
 ## 20. 有效的括号
 
 给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串 s ，判断字符串是否有效。
