--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1334,13 +1334,257 @@ console.log(result);
 
 给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
 
+![img](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2021/11/09/200px-telephone-keypad2svg.png)
+
 提示：
 
 0 <= digits.length <= 4
 digits[i] 是范围 ['2', '9'] 的一个数字。
 
+```js
+/**
+ * @param {string} digits
+ * @return {string[]}
+ */
+var letterCombinations = function(digits) {
+    let ans = [];
+    if (digits.length === 0) {
+        return ans;
+    }
+    const aCode = "a".charCodeAt();
+    for (let num of digits){
+        num=Number(num) -2;
+        let n = 3;
+        if (num === 7 || num === 5) {
+            n = 4;
+        }
+        let temp = [...ans];
+        ans = [];
+        
+        for (let i = 0; i < n; i++){
+            let code = aCode + 3 * num + i;
+            if (num === 6 || num === 7) {
+                code += 1;
+            }
+            let s = String.fromCharCode(code);
+            if (temp.length ===0){
+                ans.push(s)
+            }else{
+                for (let j = 0; j< temp.length; j++){
+                    ans.push(temp[j] + s);
+                }
+            }
+        }
+    }
+    return ans;
+};
+
+let digits = "23";
+let result = letterCombinations(digits);
+console.log(result);
 ```
 
+---
+
+## 18. 四数之和
+
+给你一个由 n 个整数组成的数组 nums ，和一个目标值 target 。请你找出并返回满足下述全部条件且不重复的四元组 [nums[a], nums[b], nums[c], nums[d]] （若两个四元组元素一一对应，则认为两个四元组重复）：
+
+0 <= a, b, c, d < n
+a、b、c 和 d 互不相同
+nums[a] + nums[b] + nums[c] + nums[d] == target
+你可以按 任意顺序 返回答案 。
+
+提示：
+
+1 <= nums.length <= 200
+-109 <= nums[i] <= 109
+-109 <= target <= 109
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[][]}
+ */
+var fourSum = function(nums, target) {
+    if (nums.length < 4) {
+        return [];
+    }
+    nums = nums.sort((a, b) => a - b);
+
+    let n = nums.length;
+    const ans = [];
+    let sum = 0;
+    //枚举第一个数字
+    for (let first = 0; first < n - 3; first++){
+        // 需要和上一次枚举的数不相同
+        if (first > 0 && nums[first] === nums[first-1]){
+            continue;
+        }
+        if (nums[first] + nums[first + 1] +nums[first + 2] + nums[first + 3] > target) {
+            //sum大于target后，后面sum不可能小于
+            break;
+        }
+        if (nums[first] + nums[n - 1] +nums[n - 2] + nums[n - 3] < target) {
+            //sum小于target后，前面sum不可能大于
+            continue;
+        }
+        //第二个数在第一个数的右端
+        for (let second = first + 1; second < n-2; second++){
+            // 需要和上一次枚举的数不相同
+            if (second > first+1 && nums[second] === nums[second-1]) {
+                continue;
+            }
+            if (nums[first] + nums[second] + nums[second + 1] + nums[second + 2] > target) {
+                //前面元素和已经大于target，则后面一定大于
+                break;
+            }
+            if (nums[first] + nums[second] +nums[n - 1] + nums[n - 2] < target) {
+                //sum小于target后，前面sum不可能大于
+                continue;
+            }
+            //第三个数位于second的右端
+            //第四个数对应的指针初始指向数组的最右端
+            let third = second + 1;
+            let fourth = n - 1;
+            while (third < fourth) {
+                sum = nums[first] + nums[second] + nums[third] + nums[fourth];
+                if (sum === target) {
+                    ans.push([nums[first], nums[second], nums[third], nums[fourth]]);
+                    // 需要保证 third 的指针在 fourth 的指针的左侧, 需要和上一次枚举的数不相同
+                    while (third < fourth && nums[third] === nums[third + 1]) {
+                        third++;
+                    }
+                    third++;
+                    while (third < fourth && nums[fourth] === nums[fourth - 1]) {
+                        fourth--;
+                    }
+                    fourth--;
+                }else if (sum < target) {
+                    third++;
+                }else{
+                    fourth--;
+                }
+            }
+        }
+    }
+    return ans;
+}
+
+let nums = [1,0,-1,0,-2,2], target = 0;
+let result = fourSum(nums, target);
+console.log(result);
+```
+
+---
+
+## 19. 删除链表的倒数第 N 个结点
+
+给你一个链表，删除链表的倒数第 n 个结点，并且返回链表的头结点。
+提示：
+
+链表中结点的数目为 sz
+1 <= sz <= 30
+0 <= Node.val <= 100
+1 <= n <= sz
+
+**进阶：**你能尝试使用一趟扫描实现吗？
+
+**计算链表长度**
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} n
+ * @return {ListNode}
+ */
+var removeNthFromEnd = function(head, n) {
+    
+    let dummy = new ListNode(0, head);  //哑节点
+    let len = 0;
+    let p = head;
+    //我们首先从头节点开始对链表进行一次遍历，得到链表的长度
+    while (p !== null){
+        p = p.next;
+        len++;
+    }
+    
+    len -= n;
+    p = dummy;
+    //随后我们再从头节点开始对链表进行一次遍历
+    while (len > 0){
+        p = p.next;
+        len--;
+    }
+    当遍历到第L−n+1 个节点时，它就是我们需要删除的节点。
+    p.next = p.next.next;
+    return dummy.next;
+};
+```
+
+栈
+
+```java
+class Solution {
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        ListNode dummy = new ListNode(0, head);
+        Deque<ListNode> stack = new LinkedList<ListNode>();
+        ListNode cur = dummy;
+        while (cur != null) {
+            stack.push(cur);
+            cur = cur.next;
+        }
+        for (int i = 0; i < n; ++i) {
+            stack.pop();
+        }
+        ListNode prev = stack.peek();
+        prev.next = prev.next.next;
+        ListNode ans = dummy.next;
+        return ans;
+    }
+}
+
+```
+
+**双指针**
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} n
+ * @return {ListNode}
+ */
+var removeNthFromEnd = function(head, n) {
+    
+    let dummy = new ListNode(0, head);  //哑节点
+    let first = head;
+    let second = dummy;  //first 与second相隔 n-1个结点
+    for (let i=0; i < n; i++){
+        first = first.next;
+    }
+    while (first){
+        first = first.next;
+        second = second.next;
+    }
+    second.next = second.next.next;
+
+    return dummy.next;
+};
 ```
 
 
@@ -1542,6 +1786,10 @@ console.log(result);
 ```
 
 ```
+
+---
+
+
 
 
 ---
@@ -10575,6 +10823,73 @@ console.log(result);
 
 
 ---
+## 691. 贴纸拼词
+
+我们有 n 种不同的贴纸。每个贴纸上都有一个小写的英文单词。
+
+您想要拼写出给定的字符串 target ，方法是从收集的贴纸中切割单个字母并重新排列它们。如果你愿意，你可以多次使用每个贴纸，每个贴纸的数量是无限的。
+
+返回你需要拼出 target 的最小贴纸数量。如果任务不可能，则返回 -1 。
+
+注意：在所有的测试用例中，所有的单词都是从 1000 个最常见的美国英语单词中随机选择的，并且 target 被选择为两个随机单词的连接。
+
+提示:
+
+n == stickers.length
+1 <= n <= 50
+1 <= stickers[i].length <= 10
+1 <= target <= 15
+stickers[i] 和 target 由小写英文单词组成
+
+**记忆化搜索 + 状态压缩**
+
+```js
+/**
+ * @param {string[]} stickers
+ * @param {string} target
+ * @return {number}
+ */
+var minStickers = function(stickers, target) {
+    const m = target.length;
+    const memo = new Array(1 << m).fill(-1);
+    memo[0] = 0;
+    const res = dp(stickers, target, memo, (1 << m) - 1);
+    return res <= m ? res : -1;
+};
+
+const dp = (stickers, target, memo, mask) =>{
+    const m = target.length;
+    if (memo[mask] < 0) {
+        let res = m + 1;
+        for (let sticker of stickers){
+            let left = mask;
+            const cnt = new Array(26).fill(0);
+            for (let i = 0; i< sticker.length; i++){
+                cnt[sticker[i].charCodeAt() - 'a'.charCodeAt()]++;
+            }
+            for (let i = 0; i < target.length; i++){
+                const c = target[i];
+                if (((mask >> i) & 1) === 1 && cnt[c.charCodeAt() - 'a'.charCodeAt()] > 0) {
+                    cnt[c.charCodeAt() - 'a'.charCodeAt()]--;
+                    left ^= 1 << i;
+                }
+            }
+            if (left < mask) {
+                res = Math.min(res, dp(stickers, target, memo, left) + 1);
+            }
+        }
+        memo[mask] = res;
+    }
+    return memo[mask];
+}
+
+let stickers = ["with","example","science"], target = "thehat";
+let result = minStickers(stickers, target);
+console.log(result);
+```
+
+---
+
 ## 693. 交替位二进制数
 
 给定一个正整数，检查它的二进制表示是否总是 0、1 交替出现：换句话说，就是二进制表示中相邻两位的数字永不相同。
@@ -11318,6 +11633,128 @@ console.log(result);
 
 
 ---
+## 812.最大三角形面积
+
+给定包含多个点的集合，从其中取三个点组成三角形，返回能组成的最大三角形的面积。
+
+注意:
+
+3 <= points.length <= 50.
+不存在重复的点。
+ -50 <= points[i][j] <= 50.
+结果误差值在 10^-6 以内都认为是正确答案。
+
+**枚举**
+
+```js
+/**
+ * @param {number[][]} points
+ * @return {number}
+ */
+var largestTriangleArea = function(points) {
+    const n = points.length;
+    let ans = 0.0;
+    for (let i = 0; i < n; i++){
+        for (let j = i + 1; j < n; j++){
+            for (let k = j + 1; k < n; k++){
+                ans = Math.max(ans, triangleArea(points[i][0], points[i][1], points[j][0], points[j][1], points[k][0], points[k][1]));
+            }
+        }
+    }
+    return ans;
+};
+
+var triangleArea= (x1, y1, x2, y2, x3, y3) =>{
+    return 0.5 * Math.abs(x1 * y2 + x2 * y3 + x3* y1 -x1 * y3 - x2 * y1 - x3 * y2);
+};
+
+let points = [[0,0],[0,1],[1,0],[0,2],[2,0]];
+let result = largestTriangleArea(points);
+console.log(result);
+```
+
+**凸包**
+
+```
+var largestTriangleArea = function(points) {
+    const convexHull = getConvexHull(points);
+    const n = convexHull.length;
+    let ret = 0.0;
+    for (let i = 0; i < n; i++) {
+        for (let j = i + 1, k = i + 2; j + 1 < n; j++) {
+            while (k + 1 < n) {
+                const curArea = triangleArea(convexHull[i][0], convexHull[i][1], convexHull[j][0], convexHull[j][1], convexHull[k][0], convexHull[k][1]);
+                const nextArea = triangleArea(convexHull[i][0], convexHull[i][1], convexHull[j][0], convexHull[j][1], convexHull[k + 1][0], convexHull[k + 1][1]);
+                if (curArea >= nextArea) {
+                    break;
+                }
+                k++;
+            }
+            const area = triangleArea(convexHull[i][0], convexHull[i][1], convexHull[j][0], convexHull[j][1], convexHull[k][0], convexHull[k][1]);
+            ret = Math.max(ret, area);
+        }
+    }
+    return ret;
+}
+
+const getConvexHull = (points) => {
+    const n = points.length;
+    if (n < 4) {
+        return points;
+    }
+    /* 按照 x 大小进行排序，如果 x 相同，则按照 y 的大小进行排序 */
+    points.sort((a, b) => {
+        if (a[0] === b[0]) {
+            return a[1] - b[1];
+        }
+        return a[0] - b[0];
+    });
+    const hull = [];
+    /* 求出凸包的下半部分 */
+    for (let i = 0; i < n; i++) {
+        while (hull.length > 1 && cross(hull[hull.length - 2], hull[hull.length - 1], points[i]) <= 0) {
+            hull.pop();
+        }
+        hull.push(points[i]);
+    }
+    let m = hull.length;
+    /* 求出凸包的上半部分 */
+    for (let i = n - 2; i >= 0; i--) {
+        while (hull.length > m && cross(hull[hull.length - 2], hull[hull.length - 1], points[i]) <= 0) {
+            hull.pop();
+        }
+        hull.push(points[i]);
+    }
+    /* hull[0] 同时参与凸包的上半部分检测，因此需去掉重复的 hull[0] */
+    hull.pop();
+    m = hull.length;
+    const hullArr = new Array(m).fill(0);
+    for (let i = 0; i < m; i++) {
+        hullArr[i] = hull[i];
+    }
+    return hullArr;
+}
+
+const triangleArea = (x1, y1, x2, y2, x3, y3) => {
+    return 0.5 * Math.abs(x1 * y2 + x2 * y3 + x3 * y1 - x1 * y3 - x2 * y1 - x3 * y2);
+}
+
+const cross = (p, q, r) => {
+    return (q[0] - p[0]) * (r[1] - q[1]) - (q[1] - p[1]) * (r[0] - q[0]);
+};
+
+作者：LeetCode-Solution
+链接：https://leetcode.cn/problems/largest-triangle-area/solution/zui-da-san-jiao-xing-mian-ji-by-leetcode-yefh/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+
+
+
+
+
+---
+
 ## 819.最常见的单词
 
 给定一个段落 (paragraph) 和一个禁用单词列表 (banned)。返回出现次数最多，同时不在禁用列表中的单词。
