--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1789,6 +1789,71 @@ console.log(result);
 
 ---
 
+## 22. 括号生成
+
+数字 n 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 有效的 括号组合。
+提示：
+
+1 <= n <= 8
+
+![括号生成(按括号序列的长度递归)](E:\pogject\学习笔记\image\leetcode\括号生成(按括号序列的长度递归).png)
+
+```js
+/**
+ * @param {number} n
+ * @return {string[]}
+ */
+var generateParenthesis = function(n) {
+    const cache = [];
+
+    var generate = (n) =>{
+        if (cache[n] !== undefined) {
+            return cache[n];
+        }
+        const ans = [];
+        if (n === 0) {
+            ans.push("");
+        }else{
+            for (let i = 0; i < n; i++){
+                for (let left of generate(i)){
+                    for (let right of generate(n - 1 - i)){
+                        ans.push("(" + left + ")" +right);
+                    }
+                }
+            }
+        }
+        cache[n] = ans;
+        return ans;
+    };
+
+    return generate(n);
+};
+
+let n = 3;
+let result = generateParenthesis(n);
+console.log(result);
+```
+
+---
+
+## 23. 合并K个升序链表
+
+给你一个链表数组，每个链表都已经按升序排列。
+
+请你将所有链表合并到一个升序链表中，返回合并后的链表。
+提示：
+
+k == lists.length
+0 <= k <= 10^4
+0 <= lists[i].length <= 500
+-10^4 <= lists[i][j] <= 10^4
+lists[i] 按 升序 排列
+lists[i].length 的总和不超过 10^4
+
+```
+
+```
+
 
 
 
