--- a/力扣/面试题.md
+++ b/力扣/面试题.md
@@ -56,3 +56,87 @@ let result = oneEditAway(first, second);
 console.log(result);
 ```
 
+---
+
+## 面试题 04.06. 后继者
+
+设计一个算法，找出二叉搜索树中指定节点的“下一个”节点（也即中序后继）。
+
+如果指定节点没有对应的“下一个”节点，则返回null。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {TreeNode} p
+ * @return {TreeNode}
+ */
+var inorderSuccessor = function(root, p) {
+    let arr = [];
+    let prev = null, curr = root;
+    while (arr.length || root){
+        while (curr){
+            arr.push(curr);
+            curr = curr.left;
+        }
+        curr = arr.pop();
+        if (prev === p) {
+            return curr;
+        }
+        prev = curr;
+        curr = curr.right;
+    }
+    return null;
+};
+```
+
+利用二叉搜索树的性质
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {TreeNode} p
+ * @return {TreeNode}
+ */
+var inorderSuccessor = function(root, p) {
+    let successor = null;
+    if (p.right) {
+        //如果节点 p 的右子树不为空，则节点 p 的后继节点在其右子树中
+        successor = p.right;
+        //在其右子树中定位到最左边的节点，即为节点 p 的后继节点。
+        while (successor.left) {
+            successor = successor.left;
+        }
+        return successor;
+    }
+    let node = root;
+    //如果节点 p 的右子树为空，则需要从根节点开始遍历寻找节点 p 的祖先节点。
+    while (node)  {
+        if (node.val > p.val) {
+            //如果 node 的节点值大于 pp 的节点值，则 p 的后继节点可能是node 或者在 node 的左子树中
+            successor = node;
+            node = node.left;
+        }else {
+            //如果 node 的节点值小于或等于 p 的节点值，则 p 的后继节点可能在 node 的右子树中，因此将 node 移动到其右子节点继续遍历。
+            node = node.right;
+        }
+    }
+    return successor;
+};
+```
+
+---
+
