--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -1850,8 +1850,214 @@ k == lists.length
 lists[i] 按 升序 排列
 lists[i].length 的总和不超过 10^4
 
+**方法一：顺序合并**
+
+用一个变量ans 来维护以及合并的链表，第 i 次循环把第 i 个链表和 ans 合并，答案保存到ans 中。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode[]} lists
+ * @return {ListNode}
+ */
+var mergeKLists = function(lists) {
+    let ans = null;
+    for (let i =0; i < lists.length; i++){
+        ans = mergeTwoLists(ans, lists[i]);
+    }
+    return ans;
+};
+
+var mergeTwoLists = function(list1, list2){
+    if ((!list1) || (!list2)) {
+        return list1 ? list1 : list2;
+    }
+    let head = new ListNode();
+    let tail = head;
+    let p1 = list1;
+    let p2 = list2;
+    while (p1 && p2){
+        if (p1.val < p2.val) {
+            tail.next = p1;
+            p1 = p1.next;
+        }else{
+            tail.next = p2;
+            p2 = p2.next;
+        }
+        tail = tail.next;
+    }
+    tail.next = (p1 ? p1 : p2);
+    return head.next;
+}
 ```
 
+**方法二：分治合并**
+
+考虑优化方法一，用分治的方法进行合并。
+
+- 将 k 个链表配对并将同一对中的链表合并；
+- 重复这一过程，直到我们得到了最终的有序链表。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode[]} lists
+ * @return {ListNode}
+ */
+var mergeKLists = function(lists) {
+    return merge(lists, 0, lists.length - 1);
+};
+
+var merge = function(lists, left, right){
+    if (left === right) {
+        return lists[left];
+    }
+    if (left > right) {
+        return null;
+    }
+    let mid = (left + right) >> 1;
+    return mergeTwoLists(merge(lists, left, mid), merge(lists, mid + 1, right));
+}
+
+var mergeTwoLists = function(list1, list2){
+    if ((!list1) || (!list2)) {
+        return list1 ? list1 : list2;
+    }
+    let head = new ListNode();
+    let tail = head;
+    let p1 = list1;
+    let p2 = list2;
+    while (p1 && p2){
+        if (p1.val < p2.val) {
+            tail.next = p1;
+            p1 = p1.next;
+        }else{
+            tail.next = p2;
+            p2 = p2.next;
+        }
+        tail = tail.next;
+    }
+    tail.next = (p1 ? p1 : p2);
+    return head.next;
+}
+```
+
+**方法三：使用优先队列合并**
+
+这个方法和前两种方法的思路有所不同，我们需要维护当前每个链表没有被合并的元素的最前面一个，k 个链表就最多有 k 个满足这样条件的元素，每次在这些元素里面选取 val 属性最小的元素合并到答案中。在选取最小元素的时候，我们可以用优先队列来优化这个过程。
+
+```
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode[]} lists
+ * @return {ListNode}
+ */
+var mergeKLists = function(lists) {
+    const queue = [];
+
+    for (let list of lists){
+        if (node !== null){
+            queue.push()
+        }
+    }
+    let head = new ListNode(0);
+    let tail = head;
+    while (queue.length){
+        let node = queue.pop();
+        tail.next = node.
+    }
+    return merge(lists, 0, lists.length - 1);
+};
+
+```
+
+---
+
+## 24. 两两交换链表中的节点
+
+给你一个链表，两两交换其中相邻的节点，并返回交换后链表的头节点。你必须在不修改节点内部的值的情况下完成本题（即，只能进行节点交换）。
+
+**提示：**
+
+- 链表中节点的数目在范围 `[0, 100]` 内
+- `0 <= Node.val <= 100`
+
+**递归**
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var swapPairs = function(head) {
+    if (head === null || head.next === null) {
+        return head;
+    }
+    let p = head.next;
+    head.next = swapPairs(p.next);
+    p.next = head;
+
+    return p;
+};
+```
+
+**迭代**
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var swapPairs = function(head) {
+    if (head === null || head.next === null) {
+        return head;
+    }
+    let dummyHead = new ListNode(0);
+    dummyHead.next = head;
+
+    let temp = dummyHead;
+    while (temp.next !== null && temp.next.next !== null){
+        let node1 = temp.next;
+        let node2 = temp.next.next;
+        temp.next = node2;
+        node1.next = node2.next;
+        node2.next = node1;
+        temp = node1;
+    }
+    return dummyHead.next;
+};
 ```
 
 
