--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9547,6 +9547,77 @@ console.log(result);
 
 
 ---
+## 434. 字符串中的单词数
+
+统计字符串中的单词个数，这里的单词指的是连续的不是空格的字符。
+
+请注意，你可以假定字符串里不包括任何不可打印的字符。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var countSegments = function(s) {
+    let ans = 0;
+    for (let i = 0; i< s.length; i++){
+        if ((i ===0 || s[i - 1] ===" ") && s[i] !== " ") {
+            ans++;
+        }
+    }
+    return ans;
+};
+```
+
+---
+
+## 441. 排列硬币
+
+你总共有 n 枚硬币，并计划将它们按阶梯状排列。对于一个由 k 行组成的阶梯，其第 i 行必须正好有 i 枚硬币。阶梯的最后一行 可能 是不完整的。
+
+给你一个数字 n ，计算并返回可形成 完整阶梯行 的总行数。
+提示：
+
+1 <= n <= 231 - 1
+
+二分法
+
+```js
+var arrangeCoins = function(n) {
+    let left = 1, right = n;
+    while (left < right) {
+        const mid = Math.floor((right - left + 1) / 2) + left;
+        if (mid * (mid + 1) <= 2 * n) {
+            left = mid;
+        } else {
+            right = mid - 1;
+        }
+    }
+    return left;
+};
+```
+
+数学
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var arrangeCoins = function(n) {
+    let ans = Math.floor((Math.sqrt(8 * n + 1) - 1) / 2);
+    return ans;
+};
+
+let n = 8;
+let result = arrangeCoins(n);
+console.log(result);
+```
+
+
+
+---
+
 ## 442. 数组中重复的数据
 
 给你一个长度为 n 的整数数组 nums ，其中 nums 的所有整数都在范围 [1, n] 内，且每个整数出现 一次 或 两次 。请你找出所有出现 两次 的整数，并以数组形式返回。
@@ -9605,6 +9676,45 @@ console.log(result);
 
 
 ---
+## 448. 找到所有数组中消失的数字
+
+给你一个含 n 个整数的数组 nums ，其中 nums[i] 在区间 [1, n] 内。请你找出所有在 [1, n] 范围内但没有出现在 nums 中的数字，并以数组的形式返回结果。
+
+提示：
+
+n == nums.length
+1 <= n <= 105
+1 <= nums[i] <= n
+进阶：你能在不使用额外空间且时间复杂度为 O(n) 的情况下解决这个问题吗? 你可以假定返回的数组不算在额外空间内。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var findDisappearedNumbers = function(nums) {
+    let ans = [];
+    let n = nums.length;
+    for (let num of nums){
+        //当我们遍历到某个位置时，其中的数可能已经被增加过，因此需要对 n 取模来还原出它本来的值
+        let x = (num - 1) % n;
+        nums[x] += n;
+    }
+    for (let [i, num] of nums.entries()){
+        if (num <= n) {
+            ans.push(i + 1);
+        }
+    }
+    return ans;
+};
+
+let nums = [4,3,2,7,8,2,3,1];
+let result = findDisappearedNumbers(nums);
+console.log(result);
+```
+
+---
+
 ## 449.序列化和反序列化二叉搜索树
 
 序列化是将数据结构或对象转换为一系列位的过程，以便它可以存储在文件或内存缓冲区中，或通过网络连接链路传输，以便稍后在同一个或另一个计算机环境中重建。
@@ -9687,6 +9797,144 @@ var deserialize = function(data) {
  * deserialize(serialize(root));
  */
 ```
+
+---
+
+## 453. 最小操作次数使数组元素相等
+
+给你一个长度为 n 的整数数组，每次操作将会使 n - 1 个元素增加 1 。返回让数组所有元素相等的最小操作次数。
+提示：
+
+n == nums.length
+1 <= nums.length <= 105
+-109 <= nums[i] <= 109
+答案保证符合 32-bit 整数
+
+每次操作既可以理解为使 n-1个元素增加 1，也可以理解使 1 个元素减少 1。显然，后者更利于我们的计算。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var minMoves = function(nums) {
+    let minNum = Math.min(...nums);
+    let ans = 0;
+    for (let i = 0; i < nums.length ; i++){
+        ans += nums[i] - minNum;
+    }
+    return ans;;
+};
+
+let nums = [4,3,2,7,8,2,3,1];
+let result = minMoves(nums);
+console.log(result);
+```
+
+---
+
+## 455. 分发饼干
+
+假设你是一位很棒的家长，想要给你的孩子们一些小饼干。但是，每个孩子最多只能给一块饼干。
+
+对每个孩子 i，都有一个胃口值 g[i]，这是能让孩子们满足胃口的饼干的最小尺寸；并且每块饼干 j，都有一个尺寸 s[j] 。如果 s[j] >= g[i]，我们可以将这个饼干 j 分配给孩子 i ，这个孩子会得到满足。你的目标是尽可能满足越多数量的孩子，并输出这个最大数值。
+
+提示：
+
+1 <= g.length <= 3 * 104
+0 <= s.length <= 3 * 104
+1 <= g[i], s[j] <= 231 - 1
+
+排序 + 贪心
+
+```js
+/**
+ * @param {number[]} g
+ * @param {number[]} s
+ * @return {number}
+ */
+var findContentChildren = function(g, s) {
+    g.sort((a, b) => a - b);
+    s.sort((a, b) => a - b);
+    let ans = 0;
+    for (let i  = 0, j = 0; i < g.length, j < s.length;){
+        if (s[j] >= g[i]) {
+            ans++;
+            i++;
+        }
+        j++;
+    }
+    return ans;
+};
+
+let g = [1,2,3], s = [1,1];
+let result = findContentChildren(g, s);
+console.log(result);
+```
+
+---
+
+## 459. 重复的子字符串
+
+给定一个非空的字符串 s ，检查是否可以通过由它的一个子串重复多次构成。
+
+ 提示：
+
+1 <= s.length <= 104
+s 由小写英文字母组成
+
+**枚举**
+
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var repeatedSubstringPattern = function(s) {
+    let n = s.length;
+    //注意到一个小优化是，因为子串至少需要重复一次
+    //不会大于 n 的一半
+    for (let i = 1; i * 2 <= n; i++){
+        if (n % i ===0) {
+            let match = true;
+            for (let j = i; j < n; j++){
+                if (s[j] !== s[j - i]) {
+                    match = false;
+                    break;
+                }
+            }
+            if (match) {
+                return true;
+            }
+        }
+    }
+    return false;
+};
+
+let s = "abcabcabcabc";
+let result = repeatedSubstringPattern(s);
+console.log(result);
+```
+
+**字符串匹配**
+
+我们将两个 s 连在一起，并移除第一个和最后一个字符。如果 s 是该字符串的子串，那么 s 就满足题目要求。
+
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var repeatedSubstringPattern = function(s) {
+   return (s + s).indexOf(s, 1) !== s.length;
+};
+
+let s = "abcabcabcabc";
+let result = repeatedSubstringPattern(s);
+console.log(result);
+```
+
+**KMP** **算法**
 
 
 
@@ -12976,6 +13224,62 @@ var minDeletionSize = function(strs) {
 
 let strs = ["zyx","wvu","tsr"];
 let result=minDeletionSize(strs);
+console.log(result);
+```
+
+---
+
+## 953. 验证外星语词典
+
+某种外星语也使用英文小写字母，但可能顺序 order 不同。字母表的顺序（order）是一些小写字母的排列。
+
+给定一组用外星语书写的单词 words，以及其字母表的顺序 order，只有当给定的单词在这种外星语中按字典序排列时，返回 true；否则，返回 false。
+
+提示：
+
+1 <= words.length <= 100
+1 <= words[i].length <= 20
+order.length == 26
+在 words[i] 和 order 中的所有字符都是英文小写字母。
+
+```js
+/**
+ * @param {string[]} words
+ * @param {string} order
+ * @return {boolean}
+ */
+var isAlienSorted = function(words, order) {
+    if (words.length === 1) {
+        return true;
+    }
+    const m = new Map();
+    order.split("").forEach((item, index)=>{
+        m.set(item,index);
+    });
+    for (let i = 0; i < words.length - 1; i++){
+        let flag = false;
+        for (let j = 0; j < words[i].length, j < words[i + 1].length; j++){
+            if (m.get(words[i][j]) > m.get(words[i+1][j])) {
+                console.log(words[i][j],words[i+1][j])
+                return false;
+            }else if (m.get(words[i][j]) < m.get(words[i+1][j])){
+                //满足字典序
+                flag = true;
+                break;
+            }
+        }
+        if (!flag) {
+            //比较两个字符串的长度
+            if (words[i].length > words[i + 1].length ){
+                return false;
+            }
+        }
+    }
+    return true;
+};
+
+let words = ["hello","leetcode"], order = "hlabcdefgijkmnopqrstuvwxyz";
+let result = isAlienSorted(words, order);
 console.log(result);
 ```
 
