--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -1450,7 +1450,7 @@ href和src的区别
 - 使元素完全脱离文档流（在文档流中不再占原来位置）
 - 行内元素设置定位效果后，支持设置宽高
 - 区块元素设置定位效果后，未设置宽度时由内容撑开宽度
-- 相对于最近一个有定位的父元素进行偏移，如果不存在就逐级向上排查，直到相对于body元素，即相对于浏览器窗口（必须有参照物）
+- **相对于最近一个有定位的父元素进行偏移**，如果不存在就逐级向上排查，直到相对于body元素，即相对于浏览器窗口（必须有参照物）
 - 子绝父相，一般配合相对定位使用，（将父元素设置相对定位，子元素相对于父元素偏移）
 - 可提升层级
 
@@ -1487,19 +1487,25 @@ href和src的区别
 
 存在常见3种fixed定位失效情况：
 
-​     \1. 父元素的transform属性值不为none时，子元素的fixed失效（比较常见，仅在部分浏览器中失效）
+​    (1) 父元素的transform属性值不为none时，子元素的fixed失效（比较常见，仅在部分浏览器中失效）
 
-​    失效原因：当元素祖先的 transform 属性非 none 时，定位容器由视口改为该祖先（摘自MDN）
+​    失效原因：当元素祖先的 transform 属性非 none 时，**定位容器由视口改为该祖先**（摘自MDN）
 
 ​    解决办法：
 
-​    经过实验发现，absolute定位在该情况下不会失效，可利用absolute定位模拟fixed效果，主要实现思路：将html的滚动条禁用，开启body滚动条，对该元素absolute定位，并不设置父级元素定位，会相对document定位，但其滚动条未开启，不会受body滚动影响
+​    经过实验发现，absolute定位在该情况下不会失效，**可利用absolute定位模拟fixed效果**，
 
-​    \2. perspective属性值不为none时（不常见）
+主要**实现思路**：将html的滚动条禁用，开启body滚动条，对该元素absolute定位，并不设置父级元素定位，会相对document定位，但其滚动条未开启，不会受body滚动影响
+
+```
+
+```
+
+   (2)  perspective属性值不为none时（不常见）
 
 ​    浏览器都不支持 perspective 属性，Chrome 和 Safari 支持替代的 -webkit-perspective 属性，目前可行办法就是删掉perspective属性
 
-​     \3. 元素的will-change中指定了任意 CSS 属性
+​    (3)  元素的will-change中指定了任意 CSS 属性
 
 ​    目前可行办法就是尽量避免给fixed定位元素设置will-change
 
@@ -1507,12 +1513,12 @@ href和src的区别
 
 ## 3.2 请问你了解浮动布局float属性吗？
 
-浮动布局：为方便页面设计，给元素设置float属性，将元素脱离文档流，浮动框进行左右移动，直至外边缘遇到包含框或者另一个浮动框边缘，再通过margin属性调整位置，float属性可取3个值：left：左浮动、right：右浮动、none：不浮动（默认）
+浮动布局：为方便页面设计，给元素设置float属性，将元素脱离文档流，浮动框进行左右移动，直至外边缘遇到包含框或者另一个浮动框边缘，**再通过margin属性调整位置**，float属性可取3个值：left：左浮动、right：右浮动、none：不浮动（默认）
 
 浮动的影响：
 
 - 改变块级元素的排列方式，内容从上下排列显示变成水平排列显示
-- 浮动元素会脱离文档流，不占位，盒子重叠，内容不重叠
+- 浮动元素会脱离文档流，**不占位**，盒子重叠，内容不重叠
 - 浮动的块级元素的宽度由内容撑开，行内元素可设宽高、margin和padding均有效，**可理解为隐式转换为inline-block元素**
 
 ---
@@ -1520,6 +1526,72 @@ href和src的区别
 ### 1. 浮动布局最常产生什么问题？
 
 通常父级盒子不设置高度时，高度将由内容或子元素撑开，当子元素浮动脱离文档流后， 父盒子就会出现高度塌陷，边框变成一条线，通常需要清除浮动来解决该问题
+
+---
+
+### 2.怎么理解css文档流/元素脱离文档流后有什么特点
+
+文档流处在文档的最底层，它规定了一个页面的位置和元素布局等规则。
+我们所创建的元素都处在文档流中，文档流所指定的规则比如块级元素独占一行，内联元素不会独占一行，内联元素不能设置高宽，父元素的高度由子元素撑开等。文档流之所以称为流，是它的布局像流一样从上到下在从左到右。
+而元素脱离文档流之后，该元素便不再遵循文档流的规则，比如块级元素不再独占一行，内联元素脱离文档流之后可以设置高宽，脱离的元素不能撑开父元素，不再在文档流中占有位置等。
+而脱离文档流的设置有两种：float，position：absolute
+
+1、float
+（我的理解是通过设置float来脱离文档流，脱离后的元素会遵循文档流之外的另一套规则，暂且称为浮动规则）。
+规则如下：
+①、产生字围效果，元素不会盖住文字，文字会绕着元素布局。
+②、元素层级提高，会盖住非浮动的元素。
+③、父元素的垂直外边距不会和子元素重叠。
+④、浮动元素不会超过超过上面的非浮动元素，会排列在非浮动块元素的下一行。
+⑤、元素浮动后会尽量向页面的左上或右上浮动，直到遇到父元素边框或其它浮动元素（浮动的元素不会脱离父元素，浮动还是相对于父元素浮动）。
+⑥、浮动的元素不会超过它上边的兄弟元素，最多一边齐。
+⑦、文档流中子元素的宽度默认为父元素的100%，脱离文档流之后，块元素的高宽度都只能由内容撑开，而且浮动的子元素无法撑开父元素（除非父元素也是浮动元素）。
+⑧、内联元素浮动后会变成块级元素。
+
+2、position:absolute
+（我的理解是通过设置绝对定位来脱离文档流，脱离后的元素会遵循文档流之外的另一套规则，暂且称为绝对定位规则）。
+规则如下：
+①、 绝对定位是相对于离他最近的开启了定位的祖先元素进行定位的，没有这种祖先元素，则相对于浏览器窗口（以左上角为坐标（0，0））
+②、定位元素会提高一个层级。
+③、内联元素变块级元素，高宽都只能由内容撑开。
+④、当一个文档流中的元素前的一个元素开启了绝对定位，则这个文档流中的元素会向上移动，被前元素覆盖。（其实跟浮动规则差不多），如果没有这样的情况，则开启了绝对定位的元素如果不设置偏移量，位置不会发生变化。
+
+浮动规则≠绝对定位规则，两者不相通
+这句话的意思是一个浮动元素和一个定位元素会重叠，且绝对定位元素的层级高于浮动元素的层级（按照浮动规则，浮动的兄弟元素是不会相互覆盖的）。
+
+```html
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+	</head>
+	<style type="text/css">
+		#box1{
+			width: 400px;
+			height: 400px;
+			/* position: absolute; */
+			float: left;
+			background-color: red;
+		}
+		#box2{
+			width: 100px;
+		    height: 100px;
+			background: green;
+			float:left;
+			/* position: absolute; */
+	</style>
+	<body>
+		<div id="box1">	
+		</div>
+		<div id="box2">
+		</div>
+	</body>
+</html>
+
+```
+
+（当两个元素都开启绝对定位且不设置偏移量时，两个元素也会像上面这个图一样相互覆盖）
 
 ---
 
@@ -1531,7 +1603,7 @@ BFC布局特点：
 
 - 在BFC区域内，内部盒子会在垂直方向上一个接一个地放置
 - 在BFC区域内，内部盒子垂直方向上的距离由margin决定。（可理解为：属于同一个BFC的两个相邻盒子的上下margin会发生重叠）
-- 同一个BFC区域内，设置了float属性的盒子不会重叠
+- 同一个BFC区域内，**设置了float属性的盒子不会重叠**
 - BFC就是页面上的一个隔离的独立容器，容器内外元素互不影响
 - 计算BFC的高度时，区域内的浮动元素也参与计算
 
