--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9936,6 +9936,10 @@ console.log(result);
 
 **KMP** **算法**
 
+```
+
+```
+
 
 
 
@@ -11163,6 +11167,49 @@ console.log(result);
 
 
 ---
+## 668. 乘法表中第k小的数
+
+几乎每一个人都用 乘法表。但是你能在乘法表中快速找到第k小的数字吗？
+
+给定高度m 、宽度n 的一张 m * n的乘法表，以及正整数k，你需要返回表中第k 小的数字。
+
+注意：
+
+m 和 n 的范围在 [1, 30000] 之间。
+k 的范围在 [1, m * n] 之间。
+
+```js
+/**
+ * @param {number} m
+ * @param {number} n
+ * @param {number} k
+ * @return {number}
+ */
+var findKthNumber = function(m, n, k) {
+    let left = 1;
+    let right = m * n;
+    while (left < right){
+        let x = left + Math.floor((right - left) /2);
+        let count = Math.floor(x / n) * n;
+        for (let i = Math.floor(x / n) + 1; i <= m; i++){
+            count += Math.floor(x / i);
+        }
+        if (count >= k) {
+            right = x;
+        }else{
+            left = x + 1;
+        }
+    }
+    return left;
+};
+
+let  m = 3, n = 3, k = 5;
+let result = findKthNumber(m, n, k);
+console.log(result);
+```
+
+---
+
 ## 682. 棒球比赛
 
 你现在是一场采用特殊赛制棒球比赛的记录员。这场比赛由若干回合组成，过去几回合的得分可能会影响以后几回合的得分。
